Fix overlap sections and checkout;

--- a/assets/component-cart.css
+++ b/assets/component-cart.css
@@ -195,6 +195,8 @@ cart-items {
 
 .cart__ctas {
   text-align: center;
+  position: relative;
+  z-index: 0;
 }
 
 @media screen and (min-width: 750px) {
